# chess-blunders

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.rst  codecov.yml  netlify.toml  pyproject.toml  setup.py
chess_blunders/: __init__.py  core.py  models.py
chess_blunders/api/: dependencies.py  main.py
chess_blunders/api/routers/: games.py  puzzles.py
chess_blunders/app/: main.py
chess_blunders/app/api/: dependencies.py  exc.py  handlers.py  main.py  package-lock.json  package.json  requirements.txt  serverless.yml
chess_blunders/app/api/routers/: games.py  puzzles.py
chess_blunders/app/routers/: games.py
chess_blunders/app/web/: .eslintrc.yml  package-lock.json  package.json
chess_blunders/app/web/src/: index.html  index.ts  utilities.ts
chess_blunders/app/web/src/styles/: chessground-theme.css  chessground.css  layout.css
tests/: conftest.py  test_api.py  test_app.py  test_chess_blunders.py  test_core.py
tests/fixtures/: games.json
tests/fixtures/api/: blunders_events.json  blunders_job_events.json  blunders_table.json  get_blunders_events.json  get_games_chessdotcom_event.json  get_games_chessdotcom_events.json  post_blunders.json  post_blunders_events.json  request_blunders_events.json  ws_connect_events.json  ws_default_events.json  ws_disconnect_events.json
tests/fixtures/core/: games.json
tests/snapshots/: snap_test_api.py  snap_test_app.py  snap_test_core.py
