[tool.poetry]
name = "chess-blunders"
version = "0.1.0"
description = "Review the mistakes from your own games."
authors = ["Ludovic Tiako <ludovic.tiako@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
chess = "^1.4.0"
fastapi = {version = "^0.63.0"}
httpx = "^0.16.1"
mangum = "^0.10.0"
requests = "^2.25.1"
uvicorn = {extras = ["standard"], version = "^0.13.3"}

[tool.poetry.dev-dependencies]
awscli = "^1.19.6"
pre-commit = "^2.9.3"
dephell = "^0.8.3"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-rerunfailures = "^9.1.1"
requests-mock = "^1.8.0"
requests-futures = "^1.0.0"
snapshottest = "^0.6.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["alembic"]
known_third_party = ["chess", "fastapi", "mangum", "pydantic", "requests", "requests_futures"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
