[tool.poetry]
name = "chess-blunders"
version = "0.1.0"
description = "Review the mistakes from your own games."
authors = ["Ludovic Tiako <ludovic.tiako@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.17"
chess = "^1.4.0"
pydantic = "^1.7.3"
requests = "^2.25.1"
requests-futures = "^1.0.0"
wrapt = "^1.12.1"
haikunator = "^2.1.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
dephell = "^0.8.3"
black = "^20.8b1"
moto = "^1.3.16"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-rerunfailures = "^9.1.1"
requests-mock = "^1.8.0"
snapshottest = "^0.6.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
